# structural-economics

./: .gitignore  CLAUDE.md  CakeEating.ipynb  CakeEating2.m  CakeEatingVFI.m  CakePy.ipynb  CakeTI.m  ConsSavingDetVFI.m  DPCake.ipynb  IO_PS1.ipynb  IncomeFluctuation.ipynb  LICENSE  MM.ipynb  OptimalGrowth.ipynb  OptimalGrowthVFI.m  Optimal_Growth.ipynb  RBCModel.ipynb  README.md  pyproject.toml  requirements.txt
1-examples/: CalibratingDMP.ipynb  gdp-hours.csv
2-dynare/: readme.txt
Continous/: 3_CakeEating.m
ContinousTime/: Solow1.ipynb  simuleqn.m  solow.m
Discrete/: Search_1_McCall(1).jl
DynamicProgramming/: CakeVFI.m
Examples/: HP Filter.ipynb  TAUCHEN.ipynb  fredgraph.csv
HA/: 1_shock_approximation.ipynb  2_income_fluctuation.ipynb  3_stationary_equilibrium.ipynb  temp2.ipynb  test.ipynb
Models/: 1_CakeEating.ipynb
Time Series/: fred-md.R
_legacy/: README.md
choice/: 1_information_theory.ipynb  CLAUDE.md  bayesRule.ipynb
continous-time/: 03-OptimalControl-Deterministic-Continous.ipynb
continuous-time/: CLAUDE.md
dp/: Growth1.m  basics.ipynb  data2.ipynb  hetagent1.ipynb  tools2.ipynb
dynamic-programming/: CLAUDE.md  DL2.ipynb  DL3.ipynb  DL4.ipynb  DL5.ipynb  DL6.ipynb  Search2.ipynb  Untitled.ipynb  Untitled1.ipynb  assetPricing1.ipynb  cake1.m  deeplearning1-rbcIrr.ipynb  deeplearning1.ipynb  deeplearning2-savings.ipynb  deeplearning2.ipynb  deeplearning3-cake.ipynb  deeplearning3.ipynb  deeplearning4-growth.ipynb  deeplearning4.ipynb  deeplearning5-coleman1991.ipynb  deeplearning5-growth-depreciation.ipynb  ed.ipynb  rbc2.ipynb  (+11 more)
(+1212 files in other folders)
