[project]
name = "structural-economics"
version = "1.0.0"
description = "Computational examples in structural economics"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
ml = ["torch", "scikit-learn", "xgboost"]
